--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
+      - name: Print OpenStruct version
+        run: gem show openstruct
       - name: Run unit tests
         run: bundle exec rake
