--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,6 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: Print OpenStruct version
-        run: gem info openstruct
+        run: gem list ostruct
       - name: Run unit tests
         run: bundle exec rake
